Sidebar nav categories don't break with word wrapping - this is NOT a perfect fix. If names get any longer it will break again. I'm not nearly guru-esque enough with CSS to make this perfect, but this will do for now.

--- a/static/sass/partials/_sidebar_content.scss
+++ b/static/sass/partials/_sidebar_content.scss
@@ -102,8 +102,12 @@
                 }
             }
             &.name {
+                display: inline-block;
+                position:absolute;
                 font-size: 1rem;
-                padding-left: .5rem;
+                padding-left: 0.5rem;
+                padding-right: 1rem;
+                width: 80%;
             }
         }
 
